--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,6 +30,8 @@ steps:
   - '-t'
   - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/hello-cloudbuild:$SHORT_SHA'
   - '.'
+  options:
+  logging: CLOUD_LOGGING_ONLY
 
 # This step pushes the image to Artifact Registry
 # The PROJECT_ID and SHORT_SHA variables are automatically
@@ -39,4 +41,7 @@ steps:
   args:
   - 'push'
   - 'us-central1-docker.pkg.dev/$PROJECT_ID/my-repository/hello-cloudbuild:$SHORT_SHA'
+  options:
+  logging: CLOUD_LOGGING_ONLY
+
 # [END cloudbuild]
